--- a/freesprite/freesprite.vcxproj
+++ b/freesprite/freesprite.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="UISVPicker.cpp" />
     <ClCompile Include="UITextField.cpp" />
     <ClCompile Include="UtilPathfind.cpp" />
+    <ClCompile Include="WMKScreen.cpp" />
     <ClCompile Include="zip\zip.c" />
   </ItemGroup>
   <ItemGroup>
@@ -414,6 +415,7 @@
     <ClInclude Include="UISVPicker.h" />
     <ClInclude Include="UITextField.h" />
     <ClInclude Include="UtilPathfind.h" />
+    <ClInclude Include="WMKScreen.h" />
     <ClInclude Include="zip\miniz.h" />
     <ClInclude Include="zip\zip.h" />
   </ItemGroup>
